<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_timer"
        android:icon="@drawable/timer"
        android:title="@string/action_timer"
        android:visible="true" />
    <item
        android:id="@+id/action_usage"
        android:icon="@drawable/stat"
        android:title="@string/action_statistics" />
    <item
        android:id="@+id/action_rank"
        android:icon="@drawable/rank"
        android:title="@string/action_rank" />
    <item
        android:id="@+id/action_store"
        android:icon="@drawable/store"
        android:title="@string/action_store" />
    <item
        android:id="@+id/action_my"
        android:icon="@drawable/setting"
        android:title="@string/action_my" />
</menu>