<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/loginImage_Bear"
        android:layout_width="216dp"
        android:layout_height="216dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/loginimage_bear"
        app:srcCompat="@drawable/shower_for_earth_bear" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/shower_for_friends"
        android:textColor="#88BADF"
        android:fontFamily="@font/dx_womanflower_m_ksc_pc_euc_h"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:backgroundTint="#B1D0E2"
            android:ems="10"
            android:hint="@string/login_id"
            android:inputType="textWebEmailAddress"
            android:fontFamily="@font/dx_womanflower_m_ksc_pc_euc_h"
            android:textAllCaps="true"
            android:textColor="#88BADF" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:backgroundTint="#B1D0E2"
            android:ems="10"
            android:fontFamily="@font/dx_womanflower_m_ksc_pc_euc_h"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:textColor="#88BADF" />

        <TextView
            android:id="@+id/login_error_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:text="* 로그인 정보가 맞지 않습니다. *"
            android:fontFamily="@font/dx_womanflower_m_ksc_pc_euc_h"
            android:visibility="invisible"
            android:textAlignment="center"
            android:textColor="#8d192b" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/dx_womanflower_m_ksc_pc_euc_h"
            android:background="@drawable/button_color_drawable"
            android:text="@string/loginButton" />

        <ImageButton
            android:id="@+id/kakaoLoginButton"
            android:layout_width="301dp"
            android:layout_height="44dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:contentDescription="@string/kakaologinbutton"
            android:visibility="gone"
            app:srcCompat="@drawable/kakao_login_medium_wide" />

        <TextView
            android:id="@+id/enrollButton_login"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/enroll"
            android:fontFamily="@font/dx_womanflower_m_ksc_pc_euc_h"
            android:textColor="#C1BFCD" />

    </LinearLayout>

</LinearLayout>