<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="?attr/colorPrimary"
        android:gravity="top"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/appName_mainToolbar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fontFamily="serif"
            android:text="@string/shower_for_friends"
            android:textAllCaps="true"
            android:textColor="@color/app_color_1"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:id="@+id/divideAppName"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:background="?android:attr/listDivider" />

    <ImageView
        android:id="@+id/enrollImage_Bear"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/enrollimage_bear"
        app:srcCompat="@drawable/shower_for_friends_polar_bear" />

    <ScrollView
        android:id="@+id/enroll_part"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/name_enroll"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/putName_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/app_color_2"
                android:ems="10"
                android:hint="@string/name_enroll"
                android:inputType="textPersonName"
                android:textColor="@color/app_color_1" />

            <TextView
                android:id="@+id/nickname_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/nickname_enroll"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/putNickname_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/app_color_2"
                android:ems="10"
                android:hint="@string/nickname_enroll"
                android:inputType="textPersonName"
                android:textColor="@color/app_color_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/emailID_enroll"
                    android:layout_width="206dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/emailID_enroll"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/checkUserInfo_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="37dp"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_color_drawable"
                    android:text="@string/checkUserInfo_btn"
                    android:visibility="invisible" />

            </LinearLayout>

            <EditText
                android:id="@+id/putEmailID_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/app_color_2"
                android:ems="10"
                android:hint="@string/putEmailID_enroll"
                android:inputType="textWebEmailAddress"
                android:textColor="@color/app_color_1" />

            <TextView
                android:id="@+id/password_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/password_enroll"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/putPassword_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/app_color_2"
                android:ems="10"
                android:hint="@string/putPassword_enroll"
                android:inputType="textPassword"
                android:textColor="@color/app_color_1" />

            <TextView
                android:id="@+id/checkPassword_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/checkPassword_enroll"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/putCheckPW_enroll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:autofillHints=""
                android:backgroundTint="@color/app_color_2"
                android:ems="10"
                android:hint="@string/checkPassword_enroll"
                android:inputType="textPassword"
                android:textColor="@color/app_color_1" />

            <TextView
                android:id="@+id/enroll_error_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="#8d192b"  />

            <Button
                android:id="@+id/enroll_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="0dp"
                android:background="@drawable/button_color_drawable"
                android:text="@string/enroll" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>